--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="two_circle_description">질문 아이콘</string>
     <string name="long_content_description">장문 아이콘</string>
     <string name="short_content_description">단문 아이콘</string>
+    <string name="home_description">홈 아이콘</string>
+    <string name="append_description">출력 아이콘</string>
 </resources>
