--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -27,4 +27,13 @@
     <string name="short_content_description">단문 아이콘</string>
     <string name="home_description">홈 아이콘</string>
     <string name="append_description">출력 아이콘</string>
+
+    <string name="close_app">\'뒤로\'버튼 한번 더 누르시면 종료됩니다.</string>
+    <string name="error_for_bidden">학생회 권한인 학생만 요청 가능해요</string>
+    <string name="error_time_out">서버 응답이 지연되고 있습니다, 잠시 후 다시 시도해주세요</string>
+    <string name="error_server">서버 에러, 관리자에게 문의하세요</string>
+    <string name="error_no_internet">네트워크가 불안정합니다, 데이터나 와이파이 연결 상태를 확인해주세요</string>
+    <string name="error_other_http">알 수 없는 오류가 발생했습니다</string>
+    <string name="error_un_known">예상치 못한 오류가 발생했습니다</string>
+    <string name="error_default">오류가 발생했습니다</string>
 </resources>
