--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -37,4 +37,23 @@
     <string name="error_other_http">알 수 없는 오류가 발생했습니다</string>
     <string name="error_un_known">예상치 못한 오류가 발생했습니다</string>
     <string name="error_default">오류가 발생했습니다</string>
+
+    <string name="expection_saveToken">토큰이 저장되지 않았습니다.</string>
+    <string name="expection_signIn">로그인에 실패했습니다.</string>"
+    <string name="expection_not_found">존재하지 않는 유저입니다.</string>
+    <string name="expection_email_not_valid">이메일이 올바르지 않습니다.</string>
+    <string name="expection_password_valid">비밀번호가 올바르지 않습니다.</string>
+    <string name="expection_bad_request">잘못된 요청입니다.</string>
+
+    <string name="main_string">EXPO</string>
+    <string name="admin_sign_in">관리자 로그인</string>
+    <string name="email_hint">이메일을 입력해주세요.</string>
+    <string name="password_hint">비밀번호를 입력해주세요.</string>
+    <string name="wrong_email">이메일을 잘못 입력하셨습니다.</string>
+    <string name="wrong_password">비밀번호를 잘못 입력하셨습니다.</string>
+    <string name="email_label">이메일</string>
+    <string name="password_label">비밀번호</string>
+    <string name="not_member">아직 관리자 로그인을 안 하셨나요?</string>
+    <string name="sign_out_bar"> | 회원가입</string>
+    <string name="sign_in">로그인</string>
 </resources>
