--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -43,17 +43,28 @@
     <string name="expection_not_found">존재하지 않는 유저입니다.</string>
     <string name="expection_email_not_valid">이메일이 올바르지 않습니다.</string>
     <string name="expection_password_valid">비밀번호가 올바르지 않습니다.</string>
+    <string name="expection_password_validdd">비밀번호가 유효하지 않습니다.</string>
     <string name="expection_bad_request">잘못된 요청입니다.</string>
 
     <string name="main_string">EXPO</string>
     <string name="admin_sign_in">관리자 로그인</string>
+    <string name="admin_sign_up">관리자 회원가입</string>"
+    <string name="name_hint">이름 입력해주세요.</string>"
     <string name="email_hint">이메일을 입력해주세요.</string>
     <string name="password_hint">비밀번호를 입력해주세요.</string>
     <string name="wrong_email">이메일을 잘못 입력하셨습니다.</string>
     <string name="wrong_password">비밀번호를 잘못 입력하셨습니다.</string>
     <string name="email_label">이메일</string>
     <string name="password_label">비밀번호</string>
-    <string name="not_member">아직 관리자 로그인을 안 하셨나요?</string>
-    <string name="sign_out_bar"> | 회원가입</string>
+    <string name="not_member">아직 관리자 로그인을 안 하셨나요? </string>
+    <string name="sign_out_bar">  | 회원가입</string>
     <string name="sign_in">로그인</string>
+    <string name="retry_password">비밀번호를 다시 입력해주세요.</string>
+    <string name="mismatch_password">비밀번호가 일치하지 않습니다.</string>
+    <string name="number">연락처</string>
+    <string name="write_number">연락처를 입력해주세요.(ex.01012345678)</string>
+    <string name="check">확인</string>
+    <string name="duplication_accout_error">등록된 사용자가 있습니다.</string>
+    <string name="sign_up_fail">회원가입에 실패하였습니다.</string>
+
 </resources>
