--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="error_default">오류가 발생했습니다</string>
 
     <string name="expection_saveToken">토큰이 저장되지 않았습니다.</string>
-    <string name="expection_signIn">로그인에 실패했습니다.</string>"
+    <string name="expection_signIn">로그인에 실패했습니다.</string>
     <string name="expection_not_found">존재하지 않는 유저입니다.</string>
     <string name="expection_email_not_valid">이메일이 올바르지 않습니다.</string>
     <string name="expection_password_valid">비밀번호가 올바르지 않습니다.</string>
@@ -48,8 +48,8 @@
 
     <string name="main_string">EXPO</string>
     <string name="admin_sign_in">관리자 로그인</string>
-    <string name="admin_sign_up">관리자 회원가입</string>"
-    <string name="name_hint">이름 입력해주세요.</string>"
+    <string name="admin_sign_up">관리자 회원가입</string>
+    <string name="name_hint">이름 입력해주세요.</string>
     <string name="email_hint">이메일을 입력해주세요.</string>
     <string name="password_hint">비밀번호를 입력해주세요.</string>
     <string name="wrong_email">이메일을 잘못 입력하셨습니다.</string>
@@ -64,7 +64,7 @@
     <string name="number">연락처</string>
     <string name="write_number">연락처를 입력해주세요.(ex.01012345678)</string>
     <string name="check">확인</string>
-    <string name="duplication_accout_error">등록된 사용자가 있습니다.</string>
+    <string name="duplication_account_error">등록된 사용자가 있습니다.</string>
     <string name="sign_up_fail">회원가입에 실패하였습니다.</string>
 
 </resources>
