--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="main_string">EXPO</string>
     <string name="admin_sign_in">관리자 로그인</string>
     <string name="admin_sign_up">관리자 회원가입</string>
+    <string name="name_label">이름</string>
     <string name="name_hint">이름 입력해주세요.</string>
     <string name="email_hint">이메일을 입력해주세요.</string>
     <string name="password_hint">비밀번호를 입력해주세요.</string>
