--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="expection_email_not_valid">이메일이 올바르지 않습니다.</string>
     <string name="expection_password_valid">비밀번호가 올바르지 않습니다.</string>
     <string name="expection_password_validdd">비밀번호가 유효하지 않습니다.</string>
+    <string name="expection_email_validdddd">이메일이 유효하지 않습니다.</string>
     <string name="expection_bad_request">잘못된 요청입니다.</string>
 
     <string name="main_string">EXPO</string>
