--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -70,5 +70,12 @@
     <string name="sign_up_fail">회원가입에 실패하였습니다.</string>
     <string name="nickname_label">아이디</string>
     <string name="hint_nickname">아이디를 입력해주세요.</string>
+    <string name="success_sign_up">회원가입에 성공하였습니다.</string>
 
+    <string name="write_certification">인증 번호 입력</string>
+    <string name="valid_certification">인증번호가 올바르지 않습니다.</string>
+    <string name="fail_certification">인증에 실패하셨습니다.</string>
+
+    <string name="re_certificationCode">인증번호 재발송</string>
+    <string name="certificationCode">인증번호 발송</string>
 </resources>
