--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -78,4 +78,13 @@
 
     <string name="re_certificationCode">인증번호 재발송</string>
     <string name="certificationCode">인증번호 발송</string>
+
+    <string name="date_type">%s ~ %s</string>
+    <string name="expo_register">박람회 신청</string>
+    <string name="array_recent">최신순</string>
+    <string name="array_older">오랜된 순</string>
+    <string name="cancel">취소</string>
+    <string name="filter">필터</string>
+    <string name="not_image_description">이미지 없음</string>
+    <string name="register_temp">모집 기간</string>
 </resources>
