:memo: :: Add Strings Resource

--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -96,4 +96,6 @@
     <string name="id">아이디</string>
 
     <string name="slash">/</string>
+
+    <string name="string_type">%s</string>
 </resources>
