--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -78,6 +78,8 @@
     <string name="expo_modify_fail">박람회 수정을 실패하였습니다.</string>
     <string name="expo_register_fail">박람회 생성을 실패하였습니다.</string>
 
+    <string name="expo_image_fail">박람회 이미지가 유효하지 않습니다.</string>
+
     <string name="write_certification">인증 번호 입력</string>
     <string name="valid_certification">인증번호가 올바르지 않습니다.</string>
     <string name="fail_certification">인증에 실패하셨습니다.</string>
