--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="main_expo_logo_description">엑스포 메인 로고</string>
+    <string name="qr_guide">큐알 가이드</string>
     <string name="down_arrow_description">아래 방향 아이콘</string>
     <string name="right_arrow_description">오른쪽 방향 아이콘</string>
     <string name="left_arrow_description">왼쪽 방향 아이콘</string>
