:truck: :: get_created_expo_list_fail, expo_not_selected 추가

--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -79,6 +79,9 @@
     <string name="expo_modify_fail">박람회 수정을 실패하였습니다.</string>
     <string name="expo_register_fail">박람회 생성을 실패하였습니다.</string>
 
+    <string name="get_created_expo_list_fail">박람회 리스트를 불러오지 못했습니다.</string>
+    <string name="expo_not_selected">박람회를 선택하고 삭제버튼을 눌러주세요.</string>
+
     <string name="expo_image_fail">박람회 이미지가 유효하지 않습니다.</string>
 
     <string name="expo_image_size_fail">박람회 이미지를 다시 업로드 해주세요.</string>
