:memo: :: Add errorToast Message -> strings.xml File

--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -116,4 +116,6 @@
     <string name="sign_up_request_allow_success">회원가입 요청 수락 성공</string>
     <string name="sign_up_request_allow_fail">회원가입 요청 수락 실패</string>
     <string name="check_sign_up_request_list_item">가입을 수락할 회원을 선택해주세요.</string>
+
+    <string name="camera_access_allow_in_setting">카메라 권한이 필요합니다. 설정에서 권한을 허용해주세요.</string>
 </resources>
