--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -118,4 +118,10 @@
     <string name="check_sign_up_request_list_item">가입을 수락할 회원을 선택해주세요.</string>
 
     <string name="camera_access_allow_in_setting">카메라 권한이 필요합니다. 설정에서 권한을 허용해주세요.</string>
+
+    <string name="logout_success">로그아웃을 성공하였습니다.</string>
+    <string name="logout_fail">로그아웃을 실패하였습니다.</string>
+
+    <string name="withdraw_success">회원 탈퇴를 성공하였습니다.</string>
+    <string name="withdraw_fail">회원 탈퇴를 실패하였습니다.</string>
 </resources>
