--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -112,6 +112,7 @@
     <string name="write_certification">인증 번호 입력</string>
     <string name="valid_certification">인증번호가 올바르지 않습니다.</string>
     <string name="fail_certification">인증에 실패하셨습니다.</string>
+    <string name="sms_not_certification">인증번호를 발급해주세요.</string>
 
     <string name="re_certificationCode">인증번호 재발송</string>
     <string name="certificationCode">인증번호 발송</string>
