:memo: :: Modify strings Res Files(모집 기간 -> 행사 시간)

--- a/core/design-system/src/main/res/values/strings.xml
+++ b/core/design-system/src/main/res/values/strings.xml
@@ -124,7 +124,7 @@
     <string name="cancel">취소</string>
     <string name="filter">필터</string>
     <string name="not_image_description">이미지 없음</string>
-    <string name="register_temp">모집 기간</string>
+    <string name="register_temp">행사 기간</string>
 
     <string name="id_hint">아이디를 입력해주세요.</string>
     <string name="wrong_id">아이디를 잘못 입력하셨습니다.</string>
